fixing title tags

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: A guide to your digital life
+title:  Machine Learning Posts
 ---
 <div class="listing">
     {% for post in paginator.posts %}
